--- a/_themes/casperjs/sourcelink.html
+++ b/_themes/casperjs/sourcelink.html
@@ -1,3 +1,6 @@
+<h3>Index</h3>
+<p><a href="{{ pathto('genindex') }}">Thesaurus</a></p>
+
 {%- if show_source and has_source and sourcename %}
   <h3>{{ _('This Page') }}</h3>
   <ul class="this-page-menu">
